# ark_ts2abc

./: OAT.xml  README.en.md  README.md  README_zh.md  ohos.build
test262/: CI_tests.txt  README.md  babel-preprocessor.js  config.py  es2015_tests.txt  es5_tests.txt  run_sunspider.py  run_test262.py  skip_tests.json  utils.py
ts2panda/: .gitignore  BUILD.gn  README.md  package-lock.json  ts2abc_config.gni  tsconfig.json
ts2panda/scripts/: diagnosticMessages.json  gen_diagnostic.sh  generate_js_bytecode.py  generate_plugin.py  run.py  run_tests.py  ts2abc.js
ts2panda/src/: addVariable2Scope.ts  assemblyDumper.ts  cmdOptions.ts  compiler.ts  compilerDriver.ts  compilerStatistics.ts  compilerUtils.ts  debuginfo.ts  hoisting.ts  index.ts  intrinsicExpander.ts  jshelpers.d.ts  jshelpers.js  lexenv.ts  log.ts  modules.ts  pandagen.ts  pandasm.ts  recorder.ts  regAllocator.ts  scope.ts  strictMode.ts  syntaxCheckHelper.ts  syntaxChecker.ts  syntaxCheckerForStrcitMode.ts  ts2panda.ts  variable.ts
ts2panda/src/base/: bcGenUtil.ts  builtIn.ts  iterator.ts  lexEnv.ts  literal.ts  lreference.ts  properties.ts  util.ts  vregisterCache.ts
ts2panda/src/expression/: arrayLiteralExpression.ts  callExpression.ts  memberAccessExpression.ts  metaProperty.ts  newExpression.ts  numericLiteral.ts  objectLiteralExpression.ts  yieldExpression.ts
ts2panda/src/function/: asyncFunctionBuilder.ts  functionBuilder.ts  generatorFunctionBuilder.ts
ts2panda/src/pass/: ICPass.ts  cacheExpander.ts  intrinsicVariantExpander.ts
ts2panda/src/statement/: classStatement.ts  forOfStatement.ts  labelTarget.ts  loopStatement.ts  returnStatement.ts  switchStatement.ts  tryStatement.ts
ts2panda/templates/: diagnostic.ts.erb  irnodes.ts.erb
ts2panda/tests/: BUILD.gn  binary.test.ts  builtIns.test.ts  conditions.test.ts  declaration.test.ts  elementAccess.test.ts  hoist.test.ts  intrinsicExpander.test.ts  lexenv.test.ts  literal.test.ts  loops.test.ts  otherExpressions.test.ts  otherStatements.test.ts  pandagen.test.ts  propertyAccess.test.ts  regAllocator.test.ts  returnStatement.test.ts  scope.test.ts  tryCatch.test.ts  unary.test.ts
ts2panda/tests/expression/: TemplateExpression.test.ts  arguments.test.ts  binary.test.ts  call.test.ts  cmpBinary.test.ts  conditions.test.ts  delete.test.ts  elementAccess.test.ts  functionExpression.test.ts  literal.test.ts  logicBinary.test.ts  new.test.ts  numericLiteral.test.ts  operationEqual.test.ts  parenthesized.test.ts  postfixOperations.test.ts  prefixOperations.test.ts  propertyAccess.test.ts  regular.test.js  stringLiteral.test.ts  templateExpression.test.ts  thisKeyWord.test.ts  typeOf.test.ts  void.test.ts
ts2panda/tests/statements/: debugger.test.ts  doWhile.test.ts  for.test.ts  forIn.test.ts  forOf.test.ts  functionDeclaration.test.ts  return.test.ts  switch.test.ts  tryCatch.test.ts  variableDeclaration.test.ts  while.test.ts
ts2panda/tests/strictmode/: function.js  function_nest1.js  global.js  strictmode.test.ts
ts2panda/tests/utils/: asthelper.ts  base.ts
ts2panda/tools/: astPrinter.ts
ts2panda/ts2abc/: BUILD.gn  ts2abc.cpp  ts2abc_options.h
